Z-index fix
Z-index på Bottom-nav + Top-nav så den ikke ligger under side content.

Sat til 10

--- a/src/css/bottomnav.css
+++ b/src/css/bottomnav.css
@@ -7,6 +7,7 @@ height: 10vh;
 display: flex;
 align-items: center;
 justify-content: space-around;
+z-index: 10;
 }
 
 .bottom-nav a {
