--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -9,6 +9,7 @@
     padding: 2rem;
     box-sizing: border-box;
     background-color: rgb(250, 250, 250);
+    z-index: 10;
 }
 
 .top-nav a {
